feat:  event store repository mongodb implementation

--- a/dEz.SkeletonCQRSES.Command.Api/appsettings.Development.json
+++ b/dEz.SkeletonCQRSES.Command.Api/appsettings.Development.json
@@ -1,8 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "sqlConnectionString": "Server=DESKTOP-U290D1U;Database=skeleton;User Id=sa;Password=password!1234;Encrypt=False;",
+        "mongoConnectionString": "mongodb://localhost:27017/admin"
+    },
+    "MongoDbConfig": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "Database": "admin",
+        "Collection": "eventStore"
+    },
+    "ProducerConfig": {
+        "BootstrapServers": "localhost:9092"
+    },
+    "ConsumerConfig": {
+        "GroupId": "Skeleton_Consumer",
+        "BootstrapServers": "localhost:9092",
+        "EnableAutoCommit": false,
+        "AutoOffsetReset": "Earliest",
+        "AllowAutoCreateTopics": true
     }
-  }
 }
