--- a/dEz.SkeletonCQRSES.Command.Api/appsettings.json
+++ b/dEz.SkeletonCQRSES.Command.Api/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "MongoSettings": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "Database": "admin",
+        "Collection": "eventStore"
     }
-  },
-  "AllowedHosts": "*"
 }
