--- a/dEz.SkeletonCQRSES.Command.Infrastructure/dEz.SkeletonCQRSES.Command.Infrastructure.csproj
+++ b/dEz.SkeletonCQRSES.Command.Infrastructure/dEz.SkeletonCQRSES.Command.Infrastructure.csproj
@@ -1,10 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>false</Nullable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\Core\dEz.SkeletonCQRSES.ES.Core.csproj" />
