feat: event handling implementation

--- a/dEz.SkeletonCQRSES.Command.Infrastructure/dEz.SkeletonCQRSES.Command.Infrastructure.csproj
+++ b/dEz.SkeletonCQRSES.Command.Infrastructure/dEz.SkeletonCQRSES.Command.Infrastructure.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\dEz.SkeletonCQRSES.ES.Core.csproj" />
+    <ProjectReference Include="..\dEz.SkeletonCQRSES.Command.Domain\dEz.SkeletonCQRSES.Command.Domain.csproj" />
   </ItemGroup>
 
 </Project>
