--- a/dEz.SkeletonCQRSES.Command.Infrastructure/dEz.SkeletonCQRSES.Command.Infrastructure.csproj
+++ b/dEz.SkeletonCQRSES.Command.Infrastructure/dEz.SkeletonCQRSES.Command.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
   </ItemGroup>
