--- a/dEz.SkeletonCQRSES.Query.Abstraction/dEz.SkeletonCQRSES.Query.Abstraction.csproj
+++ b/dEz.SkeletonCQRSES.Query.Abstraction/dEz.SkeletonCQRSES.Query.Abstraction.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\dEz.SkeletonCQRSES.Shared\dEz.SkeletonCQRSES.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
