--- a/dEz.SkeletonCQRSES.Command.Api/Properties/launchSettings.json
+++ b/dEz.SkeletonCQRSES.Command.Api/Properties/launchSettings.json
@@ -14,10 +14,11 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7194;http://localhost:5062",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      "applicationUrl": "http://localhost:5062",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development",
+            "KAFKA_TOPIC": "ExampleEvent"
+        }
     },
     "IIS Express": {
         "commandName": "IISExpress",
