--- a/dEz.SkeletonCQRSES.Shared/dEz.SkeletonCQRSES.Shared.csproj
+++ b/dEz.SkeletonCQRSES.Shared/dEz.SkeletonCQRSES.Shared.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\dEz.SkeletonCQRSES.ES.Core.csproj" />
+    <ProjectReference Include="..\dEz.Skeleton.CQRSES.ES.Core\dEz.SkeletonCQRSES.ES.Core.csproj" />
   </ItemGroup>
+
 
 </Project>
