--- a/dEz.Skeleton.CQRSES.Query.Api/dEz.Skeleton.CQRSES.Query.Api.csproj
+++ b/dEz.Skeleton.CQRSES.Query.Api/dEz.Skeleton.CQRSES.Query.Api.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\**" />
+    <Content Remove="Controllers\**" />
+    <EmbeddedResource Remove="Controllers\**" />
+    <None Remove="Controllers\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.28" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
@@ -14,10 +21,6 @@
   <ItemGroup>
     <ProjectReference Include="..\dEz.SkeletonCQRSES.Command.Api\dEz.SkeletonCQRSES.Command.Api.csproj" />
     <ProjectReference Include="..\dEz.SkeletonCQRSES.Query.Infrastructure\dEz.SkeletonCQRSES.Query.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
