chore: normalize configs

--- a/dEz.Skeleton.CQRSES.Query.Api/appsettings.Development.json
+++ b/dEz.Skeleton.CQRSES.Query.Api/appsettings.Development.json
@@ -6,11 +6,10 @@
         }
     },
     "ConnectionStrings": {
-        "sqlConnectionString": "Server=DESKTOP-U290D1U;Database=skeleton;User Id=sa;Password=password!1234;Encrypt=False;",
-        "mongoConnectionString": "mongodb://localhost:27017/admin"
+        "sqlConnectionString": "Server=DESKTOP-U290D1U;Database=skeleton;User Id=sa;Password=password!1234;Encrypt=False;"
     },
     "ConsumerConfig": {
-        "GroupId": "Skeleton_Consumer",
+        "GroupId": "Skeleton_Consumer_3",
         "BootstrapServers": "localhost:9092",
         "EnableAutoCommit": false,
         "AutoOffsetReset": "Earliest",
