--- a/dEz.Skeleton.CQRSES.Query.Api/appsettings.json
+++ b/dEz.Skeleton.CQRSES.Query.Api/appsettings.json
@@ -5,16 +5,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "sqlConnectionString": "Server=DESKTOP-U290D1U;Database=skeleton;User Id=sa;Password=password!1234;Encrypt=False;",
-        "mongoConnectionString": "mongodb://localhost:27017/admin"
-    },
-    "ConsumerConfig": {
-        "GroupId": "Skeleton_Consumer",
-        "BootstrapServers": "localhost:9092",
-        "EnableAutoCommit": false,
-        "AutoOffsetReset": "Earliest",
-        "AllowAutoCreateTopics": true
-    }
+    "AllowedHosts": "*"
 }
