--- a/dEz.SkeletonCQRSES.Command.Api/appsettings.json
+++ b/dEz.SkeletonCQRSES.Command.Api/appsettings.json
@@ -5,10 +5,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "MongoSettings": {
-        "ConnectionString": "mongodb://localhost:27017",
-        "Database": "admin",
-        "Collection": "eventStore"
-    }
+    "AllowedHosts": "*"
 }
